--- a/ZXcList.tex
+++ b/ZXcList.tex
@@ -5,127 +5,66 @@
 \input{tikzcardsTwo.tex}
 \begin{document}
 \begin{center}\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{Evolved} 
-\cardtitle{Howling Slayer} 
+\cardbackground{Gem} 
+\cardimage{Reliquary} 
+\cardtitle{Artifact1} 
 \cardborder{} 
-\cardcontent{\Persistent: Gravehold suffers 2 damage. Any player discards a card in hand.} 
-\cardprice{1} 
-\cardhp{9} 
+\cardcontent{Gain 3 \Money{}. Place the next card gained this turn into your hand.} 
+\cardprice{0} 
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{Evolved} 
-\cardtitle{Bane Commander} 
+\cardbackground{Spell} 
+\cardimage{Reliquary} 
+\cardtitle{Artifact2} 
 \cardborder{} 
-\cardcontent{\Persistent: Unleash. Any player suffers 2 damage.} 
-\cardprice{1} 
-\cardhp{6} 
+\cardcontent{\Cast: Deal 6 damage.} 
+\cardprice{0} 
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{Evolved} 
-\cardtitle{Needle Doom} 
+\cardbackground{Relic} 
+\cardimage{Reliquary} 
+\cardtitle{Artifact3} 
 \cardborder{} 
-\cardcontent{\Persistent: Unleash. Gravehold suffers 2 damage.} 
-\cardprice{2} 
-\cardhp{12} 
+\cardcontent{Gain 2 charges. \newline After the next time you activate your ability this turn, deal 3 damage.} 
+\cardprice{0} 
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{Evolved} 
-\cardtitle{Burialskulk} 
+\cardbackground{Relic} 
+\cardimage{Reliquary} 
+\cardtitle{Artifact4} 
 \cardborder{} 
-\cardcontent{\Persistent: Unleash twice.} 
-\cardprice{3} 
-\cardhp{17} 
+\cardcontent{Gravehold gains 2 life. \newline \Or \newline Any player gains 2 life.} 
+\cardprice{0} 
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{general2} 
-\cardtitle{Cauterizer} 
+\cardbackground{Relic} 
+\cardimage{Reliquary} 
+\cardtitle{Artifact5} 
 \cardborder{} 
-\cardcontent{\Persistent: The player with the fewest opened breaches suffers 2 damage.} 
-\cardprice{2} 
-\cardhp{10} 
+\cardcontent{\Attach this to any player's breach. \newline When a spell is cast from this breach, the player who cast that spell gains 1 charge.} 
+\cardprice{0} 
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{general2} 
-\cardtitle{Eye of Nothing} 
+\cardbackground{Spell} 
+\cardimage{Reliquary} 
+\cardtitle{Artifact6} 
 \cardborder{} 
-\cardcontent{\To \Discard: Spend 6 \Money{}. \newline \Power 2: Unleash. Any player loses 2 charges \newline \Or \newline Unleash twice.} 
-\cardprice{1} 
+\cardcontent{\small {This spell must be prepped to two adjacent breaches so that this card touches both breaches. This fully occupies both breaches.} \newline \small {\Cast: Deal 4 damage. You may place this card into your hand.}} 
+\cardprice{0} 
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{general2} 
-\cardtitle{Gravity Splinter} 
+\cardbackground{Spell} 
+\cardimage{Reliquary} 
+\cardtitle{Artifact7} 
 \cardborder{} 
-\cardcontent{\To \Discard: Spend 7 \Money{}. \newline \Power 2: Unleash. Any player suffers 2 damage and the players collectively discard three cards in hand.} 
-\cardprice{2} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{general2} 
-\cardtitle{Haze Spewer} 
-\cardborder{} 
-\cardcontent{\Persistent: Any player suffers 2 damage.} 
-\cardprice{1} 
-\cardhp{5} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{general2} 
-\cardtitle{Jagged One} 
-\cardborder{} 
-\cardcontent{\Persistent: Unleash twice.} 
-\cardprice{3} 
-\cardhp{15} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{general2} 
-\cardtitle{Lay Waste} 
-\cardborder{} 
-\cardcontent{Unleash twice. Any player suffers 2 damage.} 
-\cardprice{2} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{general2} 
-\cardtitle{Reality Rupture} 
-\cardborder{} 
-\cardcontent{\To \Discard: Destroy two prepped spells that each cost 3 \Money{} or more. \newline \Power 1: Unleash three times.} 
-\cardprice{3} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{general2} 
-\cardtitle{Slaughter} 
-\cardborder{} 
-\cardcontent{Unleash. Gravehold suffers 3 damage.} 
-\cardprice{1} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{general2} 
-\cardtitle{Spewed Haze} 
-\cardborder{} 
-\cardcontent{\To \Discard: Spend 6 \Money{}. \newline \Power 2: Unleash. The player with the lowest life suffers 2 damage. } 
-\cardprice{1} 
+\cardcontent{\Cast: Deal 4 damage. \newline You may return to your hand up to two cards in your discard pile that cost 0 \Money{}.} 
+\cardprice{0} 
 \end{tikzpicture}
 \hspace{-4mm}
 \end{center}
