--- a/ZXcList2.tex
+++ b/ZXcList2.tex
@@ -5,13 +5,230 @@
 \input{tikzcardsTwo.tex}
 \begin{document}
 \begin{center}\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{VolatileMan} 
-\cardtitle{Catapult Army} 
+\cardbackground{Power} 
+\cardimage{Daughters} 
+\cardtitle{Melody of Madness} 
 \cardborder{} 
-\cardcontent{\Persistent: Any player suffers 2 damage. The brambles rush Gravehold.} 
-\cardprice{2} 
-\cardhp{10} 
+\cardcontent{\Power 7: Gravehold suffers 9 damage. The players collectively lose 4 charges.  \newline Instead of discarding this, place 5 power tokens on it.} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{Daughters} 
+\cardtitle{Diatribe of Doom} 
+\cardborder{} 
+\cardcontent{\Power 12: Any player suffers 9 damage. The players collectively discard 5 cards. \newline Instead of discarding this, place 5 power tokens on it.} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{Daughters} 
+\cardtitle{Daughter of Doom} 
+\cardborder{} 
+\cardcontent{When this is dealt 3 or less damage in a single instance, place a barrier token on the other witch and that gains 1 charge.} 
+\cardprice{0} 
+\cardhp{40} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{Daughters} 
+\cardtitle{Matron of Malice} 
+\cardborder{} 
+\cardcontent{When this is dealt 3 or more damage in a single instance, place a barrier token on the other witch and that player focuses a breach.} 
+\cardprice{0} 
+\cardhp{40} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{Behemoth} 
+\cardtitle{Blizzard} 
+\cardborder{} 
+\cardcontent{\Power 4: Gravehold suffers 6 damage. Discard 3 yetilings in a single segment of the cave. \newline Place 4 power tokens on this instead of discarding it.} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{Reliquary} 
+\cardtitle{Obsession1} 
+\cardborder{} 
+\cardcontent{Gain a card that costs 5 or more.} 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{Reliquary} 
+\cardtitle{Obsession2} 
+\cardborder{} 
+\cardcontent{Cast two spells in one turn that both cost 3 or less. } 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{Reliquary} 
+\cardtitle{Obsession3} 
+\cardborder{} 
+\cardcontent{Gain 7 \Money{} in one turn.} 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{Reliquary} 
+\cardtitle{Obsession4} 
+\cardborder{} 
+\cardcontent{Cast a spell from an opened III or IV breach.} 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{Reliquary} 
+\cardtitle{Obsession5} 
+\cardborder{} 
+\cardcontent{Play 2 or more relics on their turn.} 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{Reliquary} 
+\cardtitle{Obsession6} 
+\cardborder{} 
+\cardcontent{Use an ability.} 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{Reliquary} 
+\cardtitle{Apocalypse Ritual} 
+\cardborder{} 
+\cardcontent{\To Discard: Spend 8 \Money{}. \newline \Power 2: Gravehold suffers 5 damage for each nemesis turn order card in the turn order discard pile.} 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{Reliquary} 
+\cardtitle{Dire Abbatoir} 
+\cardborder{} 
+\cardcontent{\To Discard: Spend 8 \Money{}. \newline \Power 2: The player with the most life suffers damage equal to their current life.} 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{Reliquary} 
+\cardtitle{Cataclysmic Fate} 
+\cardborder{} 
+\cardcontent{Unleash twice. \newline The player with the most prepped spells suffers 1 damage for each of their prepped spells.} 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{Reliquary} 
+\cardtitle{Engulf} 
+\cardborder{} 
+\cardcontent{\To Discard: Destroy a prepped spell that costs 5 \Money{} or more and a breach in which it was prepped. \newline \Power 1: The player with the lowest life suffers 4 damage.} 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{Reliquary} 
+\cardtitle{Monstrosity of Omens} 
+\cardborder{} 
+\cardcontent{<small>When damage is dealt to this minion, reduce that damage to 1.</small> \newline <small>\Persistent Gravehold suffers damage equal to this minion's current life.</small>} 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{Reliquary} 
+\cardtitle{Gallowskulk} 
+\cardborder{} 
+\cardcontent{\Persistent The player with the lowest life suffers 3 damage.} 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{Infecter} 
+\cardtitle{Infection1} 
+\cardborder{} 
+\cardcontent{Suffer 1 damage.} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{Infecter} 
+\cardtitle{Infection2} 
+\cardborder{} 
+\cardcontent{Lose 1 charge.} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{Infecter} 
+\cardtitle{Infection3} 
+\cardborder{} 
+\cardcontent{Discard a card in hand.} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{Infecter} 
+\cardtitle{Infection4} 
+\cardborder{} 
+\cardcontent{Reveal the top card of your deck. If it costs more than 0 \Money{}, discard it.} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{Infecter} 
+\cardtitle{Infection5} 
+\cardborder{} 
+\cardcontent{Discard a prepped spell.} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{Infecter} 
+\cardtitle{Infection6} 
+\cardborder{} 
+\cardcontent{Discard a gem in hand.} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{Infecter} 
+\cardtitle{Infection7} 
+\cardborder{} 
+\cardcontent{Discard a spell in hand.} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{Infecter} 
+\cardtitle{Infection8} 
+\cardborder{} 
+\cardcontent{Place your most expensive card in hand on top of your deck.} 
+\cardprice{0} 
 \end{tikzpicture}
 \hspace{-4mm}
 \end{center}
