--- a/ZXcList4.tex
+++ b/ZXcList4.tex
@@ -4,68 +4,4 @@
 \input{colors.tex}
 \input{tikzcardsTwo.tex}
 \begin{document}
-\begin{center}\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{Treasure} 
-\cardtitle{Knight's Quenched Chain} 
-\cardborder{} 
-\cardcontent{At the start of the game, set this next to a supply pile that costs 7 \Money{} or more. These cards cost players 1 less \Money{} to gain.} 
-\cardprice{2} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{Treasure} 
-\cardtitle{Shroud of Obfuscation} 
-\cardborder{} 
-\cardcontent{When a player opens a breach, that player gains a charge} 
-\cardprice{2} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{Treasure} 
-\cardtitle{Verdant Staff} 
-\cardborder{} 
-\cardcontent{When you gain a spell, gain 1 life.} 
-\cardprice{3} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{Treasure} 
-\cardtitle{Bones of Deathmind} 
-\cardborder{} 
-\cardcontent{At the start of your turn, gain 1 \Money{} that can only be used to gain Relics.} 
-\cardprice{3} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{Treasure} 
-\cardtitle{Forgotten Trinket} 
-\cardborder{} 
-\cardcontent{At the start of your first turn of the game, focus each of your closed breaches once.} 
-\cardprice{3} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{Treasure} 
-\cardtitle{Grieving Blade} 
-\cardborder{} 
-\cardcontent{Once per turn when you focus or open a breach, gain a charge.} 
-\cardprice{3} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{Treasure} 
-\cardtitle{Empowered Harness} 
-\cardborder{} 
-\cardcontent{When you play a gem that costs 5 \Money{} or more, gain an additional 1 \Money[}.} 
-\cardprice{3} 
-\end{tikzpicture}
-\hspace{-4mm}
-\end{center}
-\end{document}
+\begin{center}
