--- a/charSheetClaudia.tex
+++ b/charSheetClaudia.tex
@@ -4,7 +4,7 @@
 \begin{tikzpicture} 
 \cardborder 
 \basicinfo 
-\name{Seshia}
+\name{Claudia}
 \ability{Aeplosion: Activate during any ally's main phase: \newline That ally gains 2 \Money{}. The next time that ally gains a card from a supply pile this turn, you gain a copy of that card from that supply pile. \newline \Or \newline That ally gains 5 \Money{}.}{5}
 \startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Spark}
 \startingHand{Crystal}{Crystal}{Crystal}{Crystal}{Graviton Silicate}
