--- a/charSheetGygar.tex
+++ b/charSheetGygar.tex
@@ -5,10 +5,10 @@
 \cardborder 
 \basicinfo 
 \name{Gygar}
-\ability{Energize Palm: Activate during your main phase: \newline Place a "+1 damage on cast" token on your Potential Breach.}{4}
-\startingDeck{Crystal}{Crystal}{Crystal}{Spark}{Spark}
+\ability{High Tide: Activate during your main phase: \newline Place a Surge token on your Ancient Breach. \newline \Or \newline Cast a spell prepped to your Ancient Breach. Gain 2 charges.}{5}
+\startingDeck{Crystal}{Crystal}{Crystal}{Tidal Surge}{Spark}
 \startingHand{Crystal}{Crystal}{Crystal}{Tidal Surge}{Spark}
-\notes{Gygar's I breach is the Potential Breach. Up to ten +1 damage tokens can be placed on this breach. Spells cast from this breach will deal 1 additional damage for each +1 damage token that has been placed on this breach.}
+\notes{Gygar's I breach is the Ancient breach. Up to ten Surge tokens can be placed on this breach. When a spell is cast from an Ancient Breach, that spell deals 1 additional damage for each Surge token placed on that breach.}
 \startingPrep{specialbreachO.png}{1}{own1.png}{1}{rent2.png}{1}{rent3.png}{1}
 \end{tikzpicture}
 
