--- a/charSheetKrawth.tex
+++ b/charSheetKrawth.tex
@@ -5,11 +5,11 @@
 \cardborder 
 \basicinfo 
 \name{Krawth}
-\ability{Meek's Might: Activate during your main phase: \newline Return any number of cards that cost 0 \Money{} in your discard pile to your hand.}{5}
+\ability{Meek's Might: Activate during your main phase: \newline Return up to four cards that cost 0 \Money{} in your discard pile to your hand.}{5}
 \startingDeck{Crystal}{Crystal}{Crystal}{Spark}{Spark}
 \startingHand{Crystal}{Crystal}{Smithilite}{Spark}{Spark}
-\notes{Set aside all of the Forged Crystals and Forged Sparks. These form the Forged deck.}
-\startingPrep{own0.png}{1}{own1.png}{1}{rent2.png}{1}{rent3.png}{1}
+\notes{Set aside all of the Forged Crystal and Forged Spark cards. These form the Forged deck. Cards in this deck can only be gained using Krawth's Smithilite. \newline Forged Sparks and Forged Crystals count as Sparks and Crystals respectively.}
+\startingPrep{own0.png}{1}{rent1.png}{4}{rent2.png}{2}{rent3.png}{2}
 \end{tikzpicture}
 
  \end{document}
