--- a/charSheetMazra.tex
+++ b/charSheetMazra.tex
@@ -5,11 +5,11 @@
 \cardborder 
 \basicinfo 
 \name{Mazra}
-\ability{Research: Activate during your main phase: \newline \small {Destroy a card with "Mazra's" in its name in your hand or discard pile. Gain a card with "Mazra's" in its name from the personal upgrade deck that costs 3 \Money{} more than the destroyed card.} \newline \Or \newline \small {Place all cards with "Mazra's" in their name in your discard pile into your hand.}}{4}
+\ability{Research: Activate during your main phase: \newline \small {Destroy a card with "Mazra" in its name in your hand. Gain a card with "Mazra" in its name from the personal upgrade deck that costs 3 \Money{} more than the destroyed card and place that card into your hand.} \newline \Or \newline \small {Return to your hand all cards with "Mazra" in their name in your discard pile.}}{4}
 \startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Mazra's Flicker}
 \startingHand{Crystal}{Crystal}{Crystal}{Crystal}{Mazra's Flicker}
-\notes{When a spell is cast from Mazra's opened III breach, the player casting the spell gains 1 charge. \newline Set aside all cards with "Mazra's" in their name next to this mat. While these cards are set aside, they can only be gained by Mazra's Research ability.}
-\startingPrep{own0.png}{1}{rent1.png}{2}{specialbreach0.png}{2}{rent3.png}{2}
+\notes{Mazra's III breach is the Research breach. When a spell is cast from an opened Research breach, the player who cast that spell gains 1 charge. \newline Set aside all cards with "Mazra's" in their name that cost more than 0 \Money{}. These form Mazra's personal upgrade deck. Cards in this deck can only be gained using Mazra's Research ability.}
+\startingPrep{own0.png}{1}{rent1.png}{2}{specialbreach0.png}{1}{rent3.png}{2}
 \end{tikzpicture}
 
  \end{document}
