--- a/charSheetNook.tex
+++ b/charSheetNook.tex
@@ -5,7 +5,7 @@
 \cardborder 
 \basicinfo 
 \name{Nook}
-\ability{Condense Aether: Activate during your main phase: \newline You may destroy a card in your hand or discard. \newline Gain 5 Aether. \newline You may place the next spell you gain this turn into your hand.}{5}
+\ability{Condense Aether: Activate during your main phase: \newline You may destroy a card in your hand or discard pile. \newline Gain 4 \Money{}. \newline You may place the next spell you gain this turn into your hand.}{5}
 \startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Mystic Flourish}
 \startingHand{Crystal}{Crystal}{Crystal}{Crystal}{Mystic Flourish}
 \notes{}
