--- a/charSheetQu.tex
+++ b/charSheetQu.tex
@@ -5,11 +5,11 @@
 \cardborder 
 \basicinfo 
 \name{Qu}
-\ability{Form Mend: Activate during your main phase: \newline Gain 1 life for each opened breach you have. \newline You may destroy one card in your discard pile.}{4}
+\ability{Combust Aether: Activate at the start of your draw phase: Draw three cards.}{4}
 \startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Spark}
-\startingHand{Crystal}{Crystal}{Crystal}{Crystal}{Gift of Spirit}
-\notes{When a spell is cast from Qu's opened IV breach, Gravehold gains 1 life.}
-\startingPrep{own0.png}{1}{rent1.png}{1}{rent2.png}{2}{specialbreach0.png}{1}
+\startingHand{Crystal}{Crystal}{Crystal}{Crystal}{Call of the Void}
+\notes{}
+\startingPrep{own0.png}{1}{own1.png}{1}{rent2.png}{2}{rent3.png}{2}
 \end{tikzpicture}
 
  \end{document}
