--- a/charSheetRazra.tex
+++ b/charSheetRazra.tex
@@ -5,10 +5,10 @@
 \cardborder 
 \basicinfo 
 \name{Razra}
-\ability{Discipline Rip: Activate during your main phase: \newline Destroy a card with "Rip" in its name in your hand. Gain a card with "Rip" in its name from the personal upgrade deck that costs 3 \Money{} more than the destroyed card. \newline \Or \newline Place all cards with "Rip" in their name that you have played this turn or are in your discard pile into your hand.}{4}
-\startingDeck{Crystal}{Crystal}{Crystal}{"Rip, come!"}{Spark}
-\startingHand{Crystal}{Crystal}{Crystal}{"Rip, come!"}{Spark}
-\notes{Set aside all cards with "Rip" in their names next to this mat. These cards can only be gained by Razra's Hammertime ability.}
+\ability{Train Rip: Activate during your main phase: \newline \small {Destroy a card with "Rip" in its name in your hand. Gain a card with "Rip" in its name from the personal upgrade deck that costs 3 \Money{} more than the destroyed card and place that card into your hand.} \newline \Or \newline \small {Return to your hand all cards with "Rip" in their name you have played this turn or are in your discard pile.}}{4}
+\startingDeck{Crystal}{Crystal}{Crystal}{"Rip, help!"}{Spark}
+\startingHand{Crystal}{Crystal}{Crystal}{"Rip, help!"}{Spark}
+\notes{Set aside all cards with "Rip" in their name that cost more than 0 \Money{}. These form Razra's personal upgrade deck. Cards in this deck can only be gained using Razra's Train Rip ability.}
 \startingPrep{own0.png}{1}{rent1.png}{1}{rent2.png}{2}{rent3.png}{2}
 \end{tikzpicture}
 
