--- a/charSheetRhia.tex
+++ b/charSheetRhia.tex
@@ -5,11 +5,11 @@
 \cardborder 
 \basicinfo 
 \name{Rhia}
-\ability{Sublimate: Activate during your main phase: Return a relic in your hand or discard pile to its supply pile and then gain a card with cost equal to or less than the returned card's cost plus two. Place the gained card into your hand.}{4}
+\ability{Sublimate: Activate during your main phase: \newline Return a card in your hand or discard pile to its supply pile. If you returned a relic, gain a card from any supply pile that costs up to 3 \Money{} more than the returned card. Otherwise, gain a card from any supply pile that costs up to 2 \Money{} more than the returned card. Either way, place the gained card into your hand.}{4}
 \startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Crystal}
-\startingHand{Crystal}{Crystal}{Crystal}{Actuate}{Spark}
+\startingHand{Crystal}{Crystal}{Crystal}{Fossilite}{Spark}
 \notes{}
-\startingPrep{}{1}{rent1.png}{2}{rent2.png}{3}{rent3.png}{1}
+\startingPrep{}{1}{rent1.png}{4}{rent2.png}{1}{rent3.png}{1}
 \end{tikzpicture}
 
  \end{document}
