--- a/charSheetSahala.tex
+++ b/charSheetSahala.tex
@@ -5,11 +5,11 @@
 \cardborder 
 \basicinfo 
 \name{Sahala}
-\ability{Star Bind: Activate during your main phase or casting phase: \newline Reveal the top three cards of your deck. Add a spell revealed this way to your hand. Prep up to two spells in hand to your opened Celestial Breach.}{4}
+\ability{Star Bind: Activate during your casting or main phase: \newline Reveal the top three cards of your deck. Place a spell revealed this way into your hand. If there are no spells prepped to your Celestial breach, prep up to two spells in hand to your opened Celestial Breach.}{4}
 \startingDeck{Crystal}{Crystal}{Crystal}{Spark}{Spark}
 \startingHand{Crystal}{Crystal}{Crystal}{Black Meteorite}{Spark}
-\notes{Sahala's IV breach is the Celestial Breach. Spells cast from this opened breach deal 2 additional damage.}
-\startingPrep{own0.png}{1}{rent1.png}{4}{rent2.png}{1}{specialbreach0.png}{2}
+\notes{Sahala's IV breach is the Celestial Breach. When a spell is cast from an opened Celestial breach, that spell deals 2 additional damage.}
+\startingPrep{own0.png}{1}{rent1.png}{4}{rent2.png}{2}{specialbreach0.png}{2}
 \end{tikzpicture}
 
  \end{document}
