--- a/charSheetSoskel.tex
+++ b/charSheetSoskel.tex
@@ -5,10 +5,10 @@
 \cardborder 
 \basicinfo 
 \name{Soskel}
-\ability{Surging Sigil: Activate during your main phase: \newline Place a "Gain 1 charge on cast" token on any player's breach that doesn't have one.  \newline \Or \newline Gain 3 life.}{5}
+\ability{Energized Sigil: Activate during your main phase: \newline Place an Energize token on any player's breach that doesn't have one.  \newline \Or \newline Discard an Energize token on any player's breach. That player gains 4 life.}{4}
 \startingDeck{Spark}{Crystal}{Crystal}{Crystal}{Crystal}
 \startingHand{Crystal}{Crystal}{Crystal}{Hushed Salite}{Spark}
-\notes{}
+\notes{When a player casts a spell from a breach that has an Energize token on it, that player gains 1 charge.}
 \startingPrep{own0.png}{1}{rent1.png}{1}{rent2.png}{2}{rent3.png}{2}
 \end{tikzpicture}
 
