--- a/charBoard.tex
+++ b/charBoard.tex
@@ -61,11 +61,18 @@
 	\node[text width=10.5cm, left] at (\squarewidth-.5, \squareheight*.1 - 1) {\textbf{Notes:} #1};
 }
 
-\newcommand{\name}[1]{
+\newcommand{\name}[2]{
+\node at (0, 4) {\LARGE{#1}};
+\draw (-\squarewidth/2,3.5) rectangle (\squarewidth/2, 3.5-\squareheight);
+\node[text width = 2 cm] at (0, 5-\squareheight) {\begin{center}\includegraphics[height = 1.8cm]{#2}\end{center}};
+}
+
+\newcommand{\image}[1]{
 \node at (0, 4) {\LARGE{#1}};
 \draw (-\squarewidth/2,3.5) rectangle (\squarewidth/2, 3.5-\squareheight);
 \node[text width = 2 cm] at (0, 5-\squareheight) {\begin{center}Player \\ Number\end{center}};
 }
+
 \newcommand{\startingHand}[5]{
 \pgfmathsetmacro{\handheight}{3}
 \pgfmathsetmacro{\handwidth}{2.25}
