--- a/charSheetInco.tex
+++ b/charSheetInco.tex
@@ -5,10 +5,10 @@
 \cardborder 
 \basicinfo 
 \name{Inco}
-\ability{Massive Growth: Activate during your main phase: \newline Cast up to four different Thorns prepped by any number of players. Those spells deal 2 additional damage.}{5}
+\ability{Massive Growth: Activate during your main phase: \newline Cast any number of Barbs prepped by any number of players. Those spells deal 2 additional damage.}{5}
 \startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Verdant Mulch}
 \startingHand{Crystal}{Crystal}{Crystal}{Verdant Mulch}{Spark}
-\notes{Set aside all cards named Thorn. These cards form the Thorn deck. Inco may spend 2 \Money{} to gain a card from this deck.}
+\notes{Set aside all of the Barb cards. These cards form the Barb deck. This is not a supply pile. Cards in this deck can be gained using Inco's Verdant Mulch. Additionally, Inco may spend 2 \Money{} to gain a card from this deck.}
 \startingPrep{own0.png}{1}{rent1.png}{1}{rent2.png}{1}{rent3.png}{1}
 \end{tikzpicture}
 
