Revised text size nemesis mats

--- a/ZXbSheet.tex
+++ b/ZXbSheet.tex
@@ -12,12 +12,12 @@
 \def\shapeCard{(0,0) rectangle (\cardwidth,\cardheight)}
 \newcommand{\Money}{\includegraphics[height = .4cm]{money} }
 \newcommand{\cardborder}{\draw[black] \shapeCard;
-\draw[ultra thick] (\cardwidth/2, \cardheight/2) rectangle (0, \cardheight);}
-\newcommand{\name}[1]{\node[text width = \tw] at (\cardwidth/4, \cardheight-\offset) {\LARGE{#1}};}
-\newcommand{\setup}[1]{\node[text width = \tw] at (\cardwidth/4, \cardheight*.87) {\textbf{Setup:} #1};}
-\newcommand{\unleash}[1]{\node[text width = \tw] at (\cardwidth/4, \cardheight*.67) {\textbf{Unleash:} #1};}
-\newcommand{\difficulty}[1]{\node[text width = \tw] at (\cardwidth/4, \cardheight*.42) {\textbf{Additional Difficulty Rules:} #1};}
-\newcommand{\rules}[1]{\node at (\cardwidth*.7, \cardheight/2+10) ; \node[text width = 7 cm] at (\cardwidth*3/4, \cardheight/2+2) {\textbf{Rules:} #1};}
+\draw[ultra thick] (\cardwidth/2, \cardheight/2) rectangle (0, \cardheight*2);}
+\newcommand{\name}[1]{\node[text width = \tw] at (\cardwidth/4, \cardheight-\offset*2) {\LARGE{#1}};}
+\newcommand{\setup}[1]{\node[text width = \tw] at (\cardwidth/4, \cardheight*.87) {\large \textbf{Setup:} #1};}
+\newcommand{\unleash}[1]{\node[text width = \tw] at (\cardwidth/4, \cardheight*.67) {\large \textbf{Unleash:} #1};}
+\newcommand{\difficulty}[1]{\node[text width = \tw] at (\cardwidth/4, \cardheight*.20) {\textbf{Additional Difficulty Rules:} #1};}
+\newcommand{\rules}[1]{\node at (\cardwidth*.7, \cardheight/2+10) ; \node[text width = 7 cm] at (\cardwidth*3/4, \cardheight/2+2) {\large \textbf{Rules:} #1};}
 \newcommand{\image}[1]{\includegraphics[height = .8cm]{#1}}
 \newcommand{\hp}[1]{\textbf{#1} \image{heart}}
 \newcommand{\diffR}[1]{\node[text width = \tw] at (\cardwidth*.9, \cardheight*.95) {\textbf{Difficulty Rating:} #1};}
